avoid orphan item in the last row for flex-wrap

--- a/src/App.css
+++ b/src/App.css
@@ -308,13 +308,18 @@ a {
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 90%;
   flex-wrap: wrap;
   opacity: 0;
   transform: translateY(100px);
 }
 
+.projects {
+  max-width: 1300px;
+}
+
 .number-card {
+  display: inline;
   margin: 40px 20px 20px 20px;
   width: 250px;
   height: 200px;
@@ -778,5 +783,13 @@ a:hover > .contact-email {
 @media (max-width: 702px) {
   .keywords-title {
     flex-basis: 100%;
+  }
+}
+
+/* hack to maintain at least two items in the last row
+ * except when every row has only one item */
+@media (max-width: 1303px) and (min-width: 982px ) {
+  .number-cards {
+    width: 60%;
   }
 }
